--- a/personal/templates/snippets/dskb.html
+++ b/personal/templates/snippets/dskb.html
@@ -29,7 +29,7 @@
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         padding: 20px;
-        
+
       }
 
       .friend-list {
@@ -44,12 +44,12 @@
         padding: 10px;
         border-radius: 5px;
         transition: background-color 0.3s;
-        
+
       }
 
       .friend-list-item:hover {
         background-color: #f0f0f0;
-        
+
       }
 
       .friend-avatar {
@@ -97,12 +97,11 @@
               <div class="friend-name">{{ user.username }}</div>
             </div>
             <button type="submit" class="add-friend-button" onclick="acceptFriendRequest('{{ user.username }}', this)">Kết Bạn</button>
-
+            <a href="{% url 'send_friend_request' receiver_id=user.id %}"> Kết bạn</a>
           </li>
         {% endfor %}
       </ul>
     </div>
-
     <script>
       function acceptFriendRequest(username, button) {
     // Thực hiện yêu cầu Ajax để gửi lời mời kết bạn
@@ -126,3 +125,19 @@
   </body>
 </html>
 {% endblock content1 %}
+{#{% block content %}#}
+{#	<!-- Trong template hiển thị profile -->#}
+{#    {% for user in users %}#}
+{#          <li class="friend-list-item">#}
+{#          <img src="{% static 'img/avatar.jpg' %}" alt="Avatar" class="friend-avatar" />#}
+{#            <div>#}
+{#              <div class="friend-name">{{ user.username }}</div>#}
+{#            </div>#}
+{#            <button type="submit" class="add-friend-button" onclick="acceptFriendRequest('{{ user.username }}', this)">Kết Bạn</button>#}
+{#            <a href="{% url 'send_friend_request' receiver_id=user.id %}"> Kết bạn</a>#}
+{#              <a href="{% url 'send_friend_request' receiver_id=user.id %}">Gửi lời mời kết bạn</a>#}
+{##}
+{#          </li>#}
+{#        {% endfor %}#}
+{##}
+{#{% endblock content %}#}
