--- a/personal/templates/snippets/dsloimoikb.html
+++ b/personal/templates/snippets/dsloimoikb.html
@@ -87,21 +87,29 @@
     <h1>Những người gửi lời mời kết bạn</h1>
     <ul class="friend-list">
          {% for invitation in received_invitations %}
+             {% for request in friend_requests %}
+    <p>{{ request.sender.username }} đã gửi lời mời kết bạn.</p>
+     <form method="post" action="{% url 'accept_friend_request' request.id %}">
+        {% csrf_token %}
+    <!-- Thêm nút chấp nhận và từ chối lời mời nếu cần -->
+{% endfor %}
       <li class="friend-list-item">
         <img src="{% static 'img/avatar.jpg' %}" alt="Avatar" class="friend-avatar" />
         <div>
           <div class="friend-name">{{ invitation.sender.username }} </div>
             <div class="status-message" style="display: none;">Đã từ chối kết bạn</div>
         </div>
+
         <button class="accept-btn" onclick="acceptFriendRequest('{{ invitation.sender.username }}', this.parentElement)">Chấp nhận</button>
         <button class="reject-btn" onclick="rejectFriendRequest('{{ invitation.sender.username }}', this)">Từ chối</button>
+
       </li>
+                </form>
         {% endfor %}
 </ul>
   </div>
 
 <script>
-
     // Hàm xử lý khi click nút Chấp nhận
     function acceptFriendRequest(friendName, listItem) {
         // Ẩn phần tử <li> chứa lời mời kết bạn đã được chấp nhận
@@ -110,8 +118,6 @@
         // Hiển thị dòng thông báo hoặc cập nhật giao diện người dùng
         alert(`Đã chấp nhận lời mời kết bạn từ ${friendName}`);
     }
-
-
         // Hàm để thêm người bạn vào danh sách bạn bè và cập nhật UI
         function addFriendAndUpdateUI(friendName) {
             var friendshipsList = document.querySelector(".friendships-list");
@@ -126,11 +132,9 @@
                 </div>
                 <button class="message-btn" onclick="sendMessage('${friendName}')">Gửi tin nhắn</button>
             `;
-
             // Thêm người bạn vào danh sách bạn bè
             friendshipsList.appendChild(newFriendItem);
         }
-
 
         // Hàm xử lý khi click nút Từ chối
           function rejectFriendRequest(friendName, button) {
@@ -141,9 +145,16 @@
               // Hiển thị dòng thông báo hoặc cập nhật giao diện người dùng
               alert(`Đã từ chối lời mời kết bạn từ ${friendName}`);
           }
-
 </script>
-
 </body>
 </html>
 {% endblock content1 %}
+{#{% block content %}#}
+{#    <!-- Trong template hiển thị danh sách lời mời -->#}
+{#    {% for request in friend_requests %}#}
+{#        <p>{{ request.sender.username }} đã gửi lời mời kết bạn.</p>#}
+{#        <!-- Thêm nút chấp nhận và từ chối lời mời nếu cần -->#}
+{##}
+{#    {% endfor %}#}
+{##}
+{#{% endblock content %}#}
